Update ChronoTimer.java